# elfparser

./: CMakeLists.txt  LICENSE  README.md
CMake/: DeployQt5.cmake
lib/gtest-1.6.0/cmake/: internal_utils.cmake
lib/gtest-1.6.0/fused-src/gtest/: gtest-all.cc  gtest.h
lib/gtest-1.6.0/m4/: libtool.m4
lib/hash-lib/: md5.cpp  sha1.cpp  sha256.cpp
src/: abstract_dynamic.cpp  abstract_dynamic.hpp  abstract_elfheader.cpp  abstract_elfheader.hpp  abstract_programheader.cpp  abstract_programheader.hpp  abstract_sectionheader.cpp  abstract_sectionheader.hpp  abstract_segments.cpp  abstract_segments.hpp  abstract_symbol.cpp  abstract_symbol.hpp  dynamicsection.cpp  dynamicsection.hpp  elfparser.cpp  elfparser.hpp  endian.h  initarray.cpp  initarray.hpp  main.cpp  programheaders.cpp  programheaders.hpp  sectionheaders.cpp  sectionheaders.hpp  segment.cpp  segment.hpp  symbols.cpp  symbols.hpp  version.hpp
src/datastructures/: search_node.cpp  search_node.hpp  search_tree.cpp  search_tree.hpp  search_value.hpp
src/segment_types/: comment_segment.cpp  comment_segment.hpp  debuglink_segment.cpp  debuglink_segment.hpp  interp_segment.cpp  interp_segment.hpp  note_segment.cpp  note_segment.hpp  readonly_segment.cpp  readonly_segment.hpp  segment_type.cpp  segment_type.hpp  strtable_segment.cpp  strtable_segment.hpp
src/structures/: capabilities.hpp  dynamicstruct.hpp  elfheader.hpp  noteformat.hpp  programheader.hpp  relocation.hpp  sectionheader.hpp  symtable_entry.hpp
src/tests/: ls_tests.cpp  tiny_tests.cpp
src/ui/: about.ui  bug.icns  icon.rc  icons.qrc  inttablewidget.cpp  inttablewidget.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test_files/: 32_arm_ls  32_intel_ls  32_mips_be_ping  64_intel_ls  64_intel_ls_upx  bf  true
